# sam_rl

./: .gitignore
sam_rl/: CMakeLists.txt  README.md  package.xml
sam_rl/baseline_logs_cache/07.29.57-04.12.2022/: pendulum.yaml
sam_rl/baseline_logs_cache/08.52.04-03.22.2022/: trim_12d.yaml
sam_rl/baseline_logs_cache/08.53.18-03.22.2022/: trim_12d.yaml  trim_6d.yaml
sam_rl/baseline_logs_cache/1_test_trim/: readme.md
sam_rl/baseline_logs_cache/2_test_xy_waypoint/: readme.md  td3_999750_steps_env.pkl
sam_rl/launch/: ddpg_train.launch
sam_rl/src/: actuator_interface.py  trainer_baseline.py  trainer_node.py  trainer_stonefish.py
sam_rl/src/agents/: agent_ddpg.py  test_agent_ddpg.py
sam_rl/src/config/: pendulum.yaml  tight_turn_12d.yaml  tight_turn_6d.yaml  trim_12d.yaml  trim_6d.yaml  xy_12d.yaml  xy_6d.yaml
sam_rl/src/env/: env_eom.py  env_eom_gym.py  env_stonefish.py  utils.py
sam_rl/src/utils/: callbacks.py  rosbag_plot.py  test_plot.py
